--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,12 @@
   "name": "HSTC Trainer",
   "short_name": "HSTC",
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f7f7f9",
   "theme_color": "#1a73e8",
   "icons": [
-    {
-      "src": "icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
   ]
 }
